# JWT_Cryptanalysis_library_system

./: CEP_EVALUATION_READINESS.md  README.md  START_HERE.md  STEP_BY_STEP_TESTING_GUIDE.md  TESTING.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini
Library-database-secure/: .gitignore  auth-secure.js  server.js
Library-database-secure/keys/: private.pem  public.pem
Library-database-secure/public/: books.html  borrowing.html  dashboard.html  fines.html  index.html
Library-database-vulnerable/: README.md  auth-vulnerable.js  server.js
Library-database-vulnerable/public/: authors.html  availability.html  backup.html  members.html  publishers.html  reports.html  users.html
analysis/: brute_force_analysis_library.py  jwt_entropy_analysis.py
attacks/: hijack_library_tokens.py  timing_attack_library.py
backend_modifications/: BACKEND_INTEGRATION_STEPS.md  auth-secure.js  auth-vulnerable.js
core/: jwt_anomaly_detector.py  jwt_config.py  jwt_whitelist_middleware.py  logging_setup.py  rsa_key_manager.py  utils.py
data/: jwt_blacklist.json  jwt_whitelist.json  test_report.json
demo/: run_comprehensive_demo.py
jwt-cryptanalysis-library-system/: README.md
jwt-cryptanalysis-library-system/analysis/: jwt_entropy_analysis.py
keys/: private.pem  public.pem
ml_model/: collect_training_data.py  train_jwt_detector.py
secrets/: wordlist.txt
tests/: conftest.py  run_tests.py  test_analysis.py  test_integration.py  test_jwt_middleware.py  test_ml_modules.py  test_rsa_key_manager.py  test_utils.py
validation/: collect_metrics.py  test_hardened_backend.py
(+9 files in other folders)
