[project]
name = "jwt-cryptanalysis-library-system"
version = "0.1.0"
description = "JWT Cryptanalysis: Real-time vulnerability assessment and protection mechanism integrated with Library backend"
requires-python = ">=3.11"
dependencies = [
    "PyJWT>=2.8.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
]
